5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1764_1580.log
== TEST (2019-05-23 21:45:49) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes  = array(input("Nome dos alunos: "))

print(nome)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:45:56) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes  = array(input("Nome dos alunos: "))

print(nome)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:46:04) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes  = array(input("Nome dos alunos: "))

print(nomes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:47:02) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes  = array(input("Nome dos alunos: "))

print(notas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:47:21) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes  = array(input("Nome dos alunos: "))

print(notas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:53:25) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes  = input("Nome dos alunos: ")

i = 0
f = 0
a = 0
r = 0


while(i < size(notas) and i < size(nomes)):
	if(notas[i] == -1):
		f = f + 1
	else:
		f = f + 0 
	if(notas[i] >= 6):
		a = a + 1
	else:
		a = a + 0
	if(notas[i] < 6):
		r = r + 1
	else:
		r = r + 0
	i = i + 1
print(f)
print(a)
print(r)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:55:06) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0


while(i < size(notas) and i < size(nomes)):
	if(notas[i] == -1):
		f = f + 1
	else:
		f = f + 0 
	if(notas[i] >= 6):
		a = a + 1
	else:
		a = a + 0
	if(notas[i] < 6):
		r = r + 1
	else:
		r = r + 0
	i = i + 1
print(f)
print(a)
print(r)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:55:26) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0


while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	else:
		f = f + 0 
	if(notas[i] >= 6):
		a = a + 1
	else:
		a = a + 0
	if(notas[i] < 6):
		r = r + 1
	else:
		r = r + 0
	i = i + 1
print(f)
print(a)
print(r)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:57:10) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0


while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
		if(notas[i] >= 6):
			a = a + 1
		elif(notas[i] < 6):
			r = r + 1
		else:
			r = a + 0
	else:
		f = f + 0
	i = i + 1
print(f)
print(a)
print(r)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:57:43) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0


while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
		if(notas[i] >= 6):
			a = a + 1
		elif(notas[i] < 6):
			r = r + 1
		else:
			r = a + 0
	else:
		f = f + 0
	i = i + 1
print(f)
print(a)
print(r)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:58:33) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0


while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
		elif(notas[i] >= 6):
			a = a + 1
		elif(notas[i] < 6):
			r = r + 1
	else:
		f = f + 0
	i = i + 1
print(f)
print(a)
print(r)
	
-- ERROR:
File "XXXX", line 15
    elif(notas[i] >= 6):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:58:44) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0


while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		a = a + 1
	elif(notas[i] < 6):
		r = r + 1
	else:
		f = f + 0
	i = i + 1
print(f)
print(a)
print(r)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:04:31) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0


while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		a = a + 1
	elif(notas[i] < 6):
		r = r + 1
	else:
		f = f + 0
	i = i + 1
print(f)
print(a)
print(r)
print(mean(notas))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:06:42) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0
m = 0


while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		a = a + 1
	elif(notas[i] < 6):
		r = r + 1
	elif(notas[i] => 0):
		m = m + 1
	else:
		f = f + 0
		
	i = i + 1
print(f)
print(a)
print(r)

	
-- ERROR:
File "XXXX", line 20
    elif(notas[i] => 0):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:06:52) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0
m = 0


while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		a = a + 1
	elif(notas[i] < 6):
		r = r + 1
	elif(notas[i] => 0):
		m = m + 1
	else:
		f = f + 0
		
	i = i + 1
print(f)
print(a)
print(r)
print(m)

	
-- ERROR:
File "XXXX", line 20
    elif(notas[i] => 0):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:07:18) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0
m = 0


while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		a = a + 1
	elif(notas[i] < 6):
		r = r + 1
	elif(notas[i] >= 0):
		m = m + 1
	else:
		f = f + 0
		
	i = i + 1
print(f)
print(a)
print(r)
print(m)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:07:32) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0
m = 0


while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		a = a + 1
	elif(notas[i] < 6):
		r = r + 1
	elif(notas[i] >= 0):
		m = m + 1
	else:
		f = f + 0
		
	i = i + 1
print(f)
print(a)
print(r)
print(mean(m))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:08:14) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0
m = 0


while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		a = a + 1
	elif(notas[i] < 6):
		r = r + 1
	elif(notas[i] >= 0):
		m = m + 1
	else:
		f = f + 0
		
	i = i + 1
print(f)
print(a)
print(r)
print(m)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:08:46) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0
m = 0


while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		a = a + 1
	elif(notas[i] < 6):
		r = r + 1
	elif(notas[i] > 0):
		m = m + 1
	else:
		f = f + 0
		
	i = i + 1
print(f)
print(a)
print(r)
print(m)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:10:05) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0
m = 0


while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		a = a + 1
	elif(notas[i] < 6):
		r = r + 1
	elif(notas[i] >= 0):
		m = m + 1		
	i = i + 1

print(f)
print(a)
print(r)
print(m)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:10:05) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0
m = 0


while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		a = a + 1
	elif(notas[i] < 6):
		r = r + 1
	elif(notas[i] >= 0):
		m = m + 1		
	i = i + 1

print(f)
print(a)
print(r)
print(m)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:10:39) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0
m = 0


while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		a = a + 1
	elif(notas[i] < 6):
		r = r + 1
	elif(notas[i] >= 0):
		m = m + 1
	i = i + 1

print(f)
print(a)
print(r)
print(m)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:11:15) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0
m = 0


while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		a = a + 1
	elif(notas[i] < 6):
		r = r + 1
	elif(notas[i] >= 0):
		m = m + 1
	i = i + 1

print(f)
print(a)
print(r)
print(m)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:11:41) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0
m = 0


while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		a = a + 1
	elif(notas[i] < 6):
		r = r + 1
	elif(notas[i] >= 0.1):
		m = m + 1
	i = i + 1

print(f)
print(a)
print(r)
print(m)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:12:49) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0
m = 0


while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6):
		r = r + 1
	if(notas[i] >= 0.1):
		m = m + 1
	i = i + 1

print(f)
print(a)
print(r)
print(m)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:13:16) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0
m = 0


while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6):
		r = r + 1
	if(notas[i] >= 0):
		m = m + 1
	i = i + 1

print(f)
print(a)
print(r)
print(m)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:13:55) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0
m = 0


while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		a = a + 1
	elif(notas[i] < 6):
		r = r + 1
	elif(notas[i] >= 0):
		m = m + 1
	i = i + 1

print(f)
print(a)
print(r)
print(m)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:14:17) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0
m = 0


while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6):
		r = r + 1
	if(notas[i] >= 0):
		m = m + 1
	i = i + 1

print(f)
print(a)
print(r)
print(m)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:14:17) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0
m = 0


while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6):
		r = r + 1
	if(notas[i] >= 0):
		m = m + 1
	i = i + 1

print(f)
print(a)
print(r)
print(m)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:14:54) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0
m = 0


while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + 1
	i = i + 1

print(f)
print(a)
print(r)
print(m)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:15:10) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0
m = 0


while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + 1
	i = i + 1

print(f)
print(a)
print(r)
print(mean(m))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:32:19) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0
m = 0


while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + 1
	i = i + 1

print(f)
print(a)
print(r)
print(sum(m)/size(m))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:32:46) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0
m = 0


while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + 1
	i = i + 1

print(f)
print(a)
print(r)
print(sum(m)/size(notas))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:34:47) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0
m = 0


while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
	i = i + 1

print(f)
print(a)
print(r)
print(sum(m)/size(m))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:34:57) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0
m = 0


while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
	i = i + 1

print(f)
print(a)
print(r)
print(sum(m))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:35:12) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0
m = 0


while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
	i = i + 1

print(f)
print(a)
print(r)
print(mean(m))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:35:41) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0
m = 0


while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
	i = i + 1

print(f)
print(a)
print(r)
print(sum(m)/size(m))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:36:00) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0
m = 0


while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
	i = i + 1

print(f)
print(a)
print(r)
print(sum(m)/size(notas))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:36:52) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
m1 = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
		m1 = m1 + 1
	i = i + 1

print(f)
print(a)
print(r)
print(sum(m)/size(m1))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:37:15) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
m1 = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
		m1 = m1 + 1
	i = i + 1

print(f)
print(a)
print(r)
print(sum(m)/ m1 )

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:37:27) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
m1 = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
		m1 = m1 + 1
	i = i + 1

print(f)
print(a)
print(r)
print(sum(m)/ m1 )
print(m1)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:37:55) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
m1 = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
		m1 = m1 + 1
	i = i + 1

print(f)
print(a)
print(r)
print(round(sum(m)/m1, 2))
print(m1)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:38:01) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
m1 = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
		m1 = m1 + 1
	i = i + 1

print(f)
print(a)
print(r)
print(round(sum(m)/m1, 2))


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:38:02) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
m1 = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
		m1 = m1 + 1
	i = i + 1

print(f)
print(a)
print(r)
print(round(sum(m)/m1, 2))


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:38:02) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
m1 = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
		m1 = m1 + 1
	i = i + 1

print(f)
print(a)
print(r)
print(round(sum(m)/m1, 2))


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:41:54) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nome dos alunos: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
m1 = 0

while(i < size(notas) and i < size(nomes)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
		m1 = m1 + 1
	if(notas[i] == max[notas])	:
		n = nomes[i]
	i = i + 1

print(f)
print(a)
print(r)
print(round(sum(m)/m1, 2))
print(n)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:43:22) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nome dos alunos: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
m1 = 0

while(i < size(notas) and i < size(nomes)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
		m1 = m1 + 1
	if(notas[i] == max(notas))	:
		n = nomes[i]
	i = i + 1

print(f)
print(a)
print(r)
print(round(sum(m)/m1, 2))
print(n)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 22:43:53) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nome dos alunos: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
m1 = 0

while(i < size(notas) and i < size(nomes)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
		m1 = m1 + 1
	if(notas[i] == max(notas))	:
		n = nomes[i]
	i = i + 1

print(f)
print(a)
print(r)
print(round(sum(m)/m1, 2))
print(n)

	
-- EXECUTION TIME:
0.387861
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
3
6.39
HELOISA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:44:47) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nome dos alunos: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
m1 = 0

while(i < size(notas) and i < size(nomes)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
		m1 = m1 + 1
	if(notas[i] == max(notas))	:
		n = nomes[i]
	i = i + 1

print(f)
print(a)
print(r)
print(round(sum(m)/m1, 2))
print(n)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:45:37) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nome dos alunos: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
m1 = 0

while(i < size(notas) and i < size(nomes)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]/ m + 1
	if(notas[i] == max(notas))	:
		n = nomes[i]
	i = i + 1

print(f)
print(a)
print(r)
print(round(m, 2))
print(n)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:45:38) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nome dos alunos: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
m1 = 0

while(i < size(notas) and i < size(nomes)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]/ m + 1
	if(notas[i] == max(notas))	:
		n = nomes[i]
	i = i + 1

print(f)
print(a)
print(r)
print(round(m, 2))
print(n)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 22:46:10) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nome dos alunos: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
m1 = 0

while(i < size(notas) and i < size(nomes)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
		m1 = m1 + 1
	if(notas[i] == max(notas))	:
		n = nomes[i]
	i = i + 1

print(f)
print(a)
print(r)
print(round(sum(m)/m1, 2))
print(n)

	
-- EXECUTION TIME:
0.486993
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
3
6.39
HELOISA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 22:47:05) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nome dos alunos: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
m1 = 0

while(i < size(notas) and i < size(nomes)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
		m1 = m1 + 1
	if(notas[i] == max(notas))	:
		n = nomes[i]
	else:
		f = f + 0
	i = i + 1

print(f)
print(a)
print(r)
print(round(sum(m)/m1, 2))
print(n)

	
-- EXECUTION TIME:
0.541963
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
3
6.39
HELOISA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:47:37) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nome dos alunos: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
m1 = 0

while(i < size(notas) and i < size(nomes)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
		m1 = m1 + 1
	if(notas[i] == max(notas))	:
		n = nomes[i]
	i = i + 1

print(f)
print(a)
print(r)
print(round(sum(m)/m1, 2))
print(n)
print(size(m))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 23:03:01) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nome dos alunos: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
m1 = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
		m1 = m1 + 1
	if(notas[i] == max(notas))	:
		n = nomes[i]
	i = i + 1

print(f)
print(a)
print(r)
print(round(sum(m)/m1, 2))
print(n)

	
-- EXECUTION TIME:
0.396619
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
Notas: Nome dos alunos: 6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
Notas: Nome dos alunos: 0
7
3
6.39
HELOISA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 23:03:05) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nome dos alunos: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
m1 = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
		m1 = m1 + 1
	if(notas[i] == max(notas))	:
		n = nomes[i]
	i = i + 1

print(f)
print(a)
print(r)
print(round(sum(m)/m1, 2))
print(n)

	
-- EXECUTION TIME:
0.752692
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
3
6.39
HELOISA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 23:03:06) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nome dos alunos: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
m1 = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
		m1 = m1 + 1
	if(notas[i] == max(notas))	:
		n = nomes[i]
	i = i + 1

print(f)
print(a)
print(r)
print(round(sum(m)/m1, 2))
print(n)

	
-- EXECUTION TIME:
0.803178
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
3
6.39
HELOISA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 23:03:19) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nome dos alunos: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
m1 = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
		m1 = m1 + 1
	if(notas[i] == max(notas))	:
		n = nomes[i]
	i = i + 1

print(f)
print(a)
print(r)
print(round(sum(m)/m1, 2))
print(n)

	
-- EXECUTION TIME:
0.54213
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
3
6.39
HELOISA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 21:38:04) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes = input("Nome dos alunos: ")


i = 0
f = 0
a = 0
r = 0
m = 0
m1 = 0

while(i < size(notas) and i < size(nomes)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
		m1 = m1 + 1
	if(notas[i] == max(notas))	:
		n = nomes[i]
	i = i + 1

print(f)
print(a)
print(r)
print(round(sum(m)/m1, 2))
print(n)

	
-- EXECUTION TIME:
0.524918
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
0
1
0
9.0
[
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
1
0
0
nan
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
0
1
1.23
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 21:38:11) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nome dos alunos: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
m1 = 0

while(i < size(notas) and i < size(nomes)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
		m1 = m1 + 1
	if(notas[i] == max(notas))	:
		n = nomes[i]
	i = i + 1

print(f)
print(a)
print(r)
print(round(sum(m)/m1, 2))
print(n)

	
-- EXECUTION TIME:
0.434999
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
3
6.39
HELOISA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 23:36:34) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nome dos alunos: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
m1 = 0

while(i < size(notas) and i < size(nomes)):
	if(notas[i] == -1.0):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
		m1 = m1 + 1
	if(notas[i] == max(notas))	:
		n = nomes[i]
	i = i + 1

print(f)
print(a)
print(r)
print(round(sum(m)/m1, 2))
print(n)

	
-- EXECUTION TIME:
0.346814
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
Notas: Nome dos alunos: 0
7
3
6.39
HELOISA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 23:38:05) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nome dos alunos: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
m1 = 0

while(i < size(notas) and i < size(nomes)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6 and notas[i] <= 10):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0 and notas[i] <= 10):
		m = m + notas[i]
		m1 = m1 + 1
	if(notas[i] == max(notas))	:
		n = nomes[i]
	i = i + 1

print(f)
print(a)
print(r)
print(round(sum(m)/m1, 2))
print(n)

	
-- EXECUTION TIME:
0.361953
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
Notas: Nome dos alunos: 6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
Notas: Nome dos alunos: 0
7
3
6.39
HELOISA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 23:38:15) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nome dos alunos: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
m1 = 0

while(i < size(notas) and i < size(nomes)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6 and notas[i] <= 10):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0 ):
		m = m + notas[i]
		m1 = m1 + 1
	if(notas[i] == max(notas))	:
		n = nomes[i]
	i = i + 1

print(f)
print(a)
print(r)
print(round(sum(m)/m1, 2))
print(n)

	
-- EXECUTION TIME:
0.461784
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
Notas: Nome dos alunos: 6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
Notas: Nome dos alunos: 0
7
3
6.39
HELOISA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 23:38:45) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nome dos alunos: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
m1 = 0

while(i < size(notas) and i < size(nomes)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
		m1 = m1 + 1
	if(notas[i] == max(notas))	:
		n = nomes[i]
	i = i + 1

print(f)
print(a)
print(r)
print(round(sum(m)/m1, 2))
print(n)

	
-- EXECUTION TIME:
0.396511
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
3
6.39
HELOISA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 23:39:40) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nome dos alunos: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
m1 = 0

while(i < size(notas) and i < size(nomes)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
		m1 = m1 + 1
	if(notas[i] == max(notas))	:
		n = nomes[i]
	i = i + 1

print(f)
print(a)
print(r)
print(round(sum(m)/m1, 2))
print(n)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 23:42:46) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nome dos alunos: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
m1 = 0

while(i < size(notas) and i < size(nomes)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6 and notas[i] =< 10):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
		m1 = m1 + 1
	if(notas[i] == max(notas))	:
		n = nomes[i]
	i = i + 1

print(f)
print(a)
print(r)
print(round(sum(m)/m1, 2))
print(n)

	
-- EXECUTION TIME:
0.128507
-- ERROR:
  File "/home/codebench/codes/1764/1580/main.py", line 17
    if(notas[i] >= 6 and notas[i] =< 10):
                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 23:42:51) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nome dos alunos: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
m1 = 0

while(i < size(notas) and i < size(nomes)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6 and notas[i] =< 10):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
		m1 = m1 + 1
	if(notas[i] == max(notas))	:
		n = nomes[i]
	i = i + 1

print(f)
print(a)
print(r)
print(round(sum(m)/m1, 2))
print(n)

	
-- ERROR:
File "XXXX", line 17
    if(notas[i] >= 6 and notas[i] =< 10):
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 23:43:09) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nome dos alunos: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
m1 = 0

while(i < size(notas) and i < size(nomes)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6 and notas[i] <= 10):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
		m1 = m1 + 1
	if(notas[i] == max(notas))	:
		n = nomes[i]
	i = i + 1

print(f)
print(a)
print(r)
print(round(sum(m)/m1, 2))
print(n)

	
-- EXECUTION TIME:
0.468367
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
3
6.39
HELOISA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 23:43:45) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nome dos alunos: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
m1 = 0

while(i < size(notas) and i < size(nomes)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6 and notas[i] <= 10):
		a = a + 1
	if(notas[i] < 6 and notas[i] >= 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
		m1 = m1 + 1
	if(notas[i] == max(notas))	:
		n = nomes[i]
	i = i + 1

print(f)
print(a)
print(r)
print(round(sum(m)/m1, 2))
print(n)

	
-- EXECUTION TIME:
0.496771
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
Notas: Nome dos alunos: 3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
Notas: Nome dos alunos: 6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
Notas: Nome dos alunos: 0
7
4
6.39
HELOISA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 23:43:54) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nome dos alunos: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
m1 = 0

while(i < size(notas) and i < size(nomes)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6 and notas[i] <= 10):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
		m1 = m1 + 1
	if(notas[i] == max(notas))	:
		n = nomes[i]
	i = i + 1

print(f)
print(a)
print(r)
print(round(sum(m)/m1, 2))
print(n)

	
-- EXECUTION TIME:
0.310932
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
3
6.39
HELOISA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 23:44:19) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nome dos alunos: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
m1 = 0

while(i < size(notas) and i < size(nomes)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6 and notas[i] <= 10):
		a = a + 1
	if(notas[i] < 6 and notas[i] > 0):
		r = r + 1
	if(notas[i] > 0):
		m = m + notas[i]
		m1 = m1 + 1
	if(notas[i] == max(notas))	:
		n = nomes[i]
	i = i + 1

print(f)
print(a)
print(r)
print(round(sum(m)/m1, 2))
print(n)

	
-- EXECUTION TIME:
0.580953
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
3
7.03
HELOISA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 23:44:47) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nome dos alunos: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
m1 = 0

while(i < size(notas) and i < size(nomes)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6 and notas[i] <= 10):
		a = a + 1
	if(notas[i] < 6 and notas[i] >= 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
		m1 = m1 + 1
	if(notas[i] == max(notas))	:
		n = nomes[i]
	i = i + 1

print(f)
print(a)
print(r)
print(round(sum(m)/m1, 2))
print(n)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 23:47:33) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nome dos alunos: ")))


i = 0
f = 0
a = 0
r = 0
m = 0


while(i < size(notas) and i < size(nomes)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6 and notas[i] <= 10):
		a = a + 1
	if(notas[i] < 6 and notas[i] >= 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i] / m + 1
		
	if(notas[i] == max(notas))	:
		n = nomes[i]
	i = i + 1

print(f)
print(a)
print(r)
print(round(sum(m)/m1, 2))
print(n)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 23:48:27) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nome dos alunos: ")))


i = 0
f = 0
a = 0
r = 0
m = 0


while(i < size(notas) and i < size(nomes)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6 and notas[i] <= 10):
		a = a + 1
	if(notas[i] < 6 and notas[i] >= 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
		m = m + 1
	if(notas[i] == max(notas))	:
		n = nomes[i]
	i = i + 1

print(f)
print(a)
print(r)
print(round(sum(m)/m, 2))
print(n)

	
-- EXECUTION TIME:
0.51045
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
1.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
1.0
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
1.0
HELOISA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 23:48:52) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nome dos alunos: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
soma = 0

while(i < size(notas) and i < size(nomes)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6 and notas[i] <= 10):
		a = a + 1
	if(notas[i] < 6 and notas[i] >= 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
		soma = soma + 1
	if(notas[i] == max(notas))	:
		n = nomes[i]
	i = i + 1

print(f)
print(a)
print(r)
print(round(sum(m)/soma, 2))
print(n)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 23:49:25) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nome dos alunos: ")))


i = 0
f = 0
a = 0
r = 0
m = 0
soma = 0

while(i < size(notas) and i < size(nomes)):
	if(notas[i] == -1):
		f = f + 1
	if(notas[i] >= 6 and notas[i] <= 10):
		a = a + 1
	if(notas[i] < 6 and notas[i] >= 0):
		r = r + 1
	if(notas[i] >= 0):
		m = m + notas[i]
		soma = soma + 1
	if(notas[i] == max(notas))	:
		n = nomes[i]
	i = i + 1

print(f)
print(a)
print(r)
print(round(sum(m)/soma, 2))
print(n)

	
-- EXECUTION TIME:
0.373364
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
